# crease

./: .gitignore  .pre-commit-config.yaml  ANECDOTES.md  API.md  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  CONVENTIONS.mdx  LICENSE  README.md  corruptors.py  layouts.py  mkdocs.yml  profiler.py  pyproject.toml  schema_inference.py  scorer.py  series.py  sheet.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/templates/: .release_notes.md.j2
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
crease/: __init__.py  cli.py  extractor.py  session.py  template_model.py  validator.py
docs/: cli.md  conventions.md  index.md  quickstart.md  why.md
docs/guides/: blocks.md  layouts.md  pandas-projection.md  pydantic-projection.md  streaming.md  templates.md
docs/reference/: errors.md  extract.md  template.md  validate.md
src/crease/: __init__.py  _coerce.py  _errors.py  _locate.py  _workbook.py  cli.py  extractor.py  session.py  template_model.py  validator.py
test_cases/: __init__.py  cases.py  generate.py  types.py
test_cases/anchored_scattered/: description.txt  expected.json  input.xlsx  notes.md  template.yml
test_cases/blocks_capture_multiple_matches_error/: description.txt  expected.json  expected_issues.json  input.xlsx  notes.md  template.yml
test_cases/blocks_capture_no_match_required/: description.txt  expected.json  expected_issues.json  input.xlsx  notes.md  template.yml
test_cases/blocks_capture_wrong_type/: description.txt  expected.json  expected_issues.json  input.xlsx  notes.md  template.yml
test_cases/blocks_starts_not_found/: description.txt  expected.json  expected_issues.json  input.xlsx  notes.md  template.yml
test_cases/blocks_unterminated/: description.txt  expected.json  expected_issues.json  input.xlsx  notes.md  template.yml
test_cases/corrupted_below_minimum/: description.txt  expected.json  expected_issues.json  input.xlsx  notes.md  template.yml
test_cases/corrupted_missing_value/: description.txt  expected.json  expected_issues.json  input.xlsx  notes.md  template.yml
test_cases/corrupted_renamed_header/: description.txt  expected.json  expected_issues.json  input.xlsx  notes.md  template.yml
test_cases/corrupted_wrong_type/: description.txt  expected.json  expected_issues.json  input.xlsx  notes.md  template.yml
test_cases/dialect_acme/: description.txt  expected.json  expected_issues.json  input.xlsx  notes.md  template.yml
test_cases/dialect_globex/: description.txt  expected.json  input.xlsx  notes.md  template.yml
test_cases/flat_simple/: description.txt  expected.json  input.xlsx  notes.md  template.yml
test_cases/flat_with_title_rows/: description.txt  expected.json  input.xlsx  notes.md  template.yml
test_cases/flat_with_totals_row/: description.txt  expected.json  expected_issues.json  input.xlsx  notes.md  template.yml
test_cases/legacy_xls/: description.txt  input.xls  template.yml
test_cases/multi_tab_acme/: description.txt  expected.json  input.xlsx  notes.md  template.yml
test_cases/property_sheet_cover/: description.txt  expected.json  input.xlsx  notes.md  template.yml
test_cases/repeating_sections_per_tab/: description.txt  expected.json  input.xlsx  notes.md  template.yml
tests/: test_blocks_template_validation.py  test_corpus.py  test_engine.py  test_errors.py  test_field_scan_gaps.py  test_field_scan_gaps_csv.py  test_projection.py
tools/fixturegen/: corruptors.py  evaluator.py  generate.py  layouts.py  profiler.py  scorer.py  series.py  sheet.py
tools/inferrer/: app.py  schema_inference.py
