[tool.poetry]
name = "crease"
version = "0.1.0"
description = "Declarative Excel-to-JSON extraction and validation. Apply a compact YAML template to .xlsx files to produce canonical JSON and structured per-cell validation errors."
license = "BSD-3-Clause"
readme = "README.md"
authors = ["Christian Toivola"]
homepage = "https://github.com/dev360/crease"
repository = "https://github.com/dev360/crease"
documentation = "https://github.com/dev360/crease#readme"
keywords = ["excel", "xlsx", "etl", "extraction", "validation", "schema", "pandas", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
packages = [{ include = "crease", from = "src" }]

# Core dependencies — what every install ships with.
# Notably absent: pandas, pandera. Those are opt-in via the `pandas` extra.
[tool.poetry.dependencies]
python = ">=3.10,<4.0"
openpyxl = ">=3.1"
pydantic = ">=2.0"
python-calamine = ">=0.2"
pyyaml = ">=6.0"

# Optional extras — pulled in only when the user asks for them.
pandas = { version = ">=2.0", optional = true }
pandera = { version = ">=0.18", optional = true }
mkdocs-material = { version = ">=9.5", optional = true }
mkdocstrings = { version = ">=0.25", extras = ["python"], optional = true }

[tool.poetry.extras]
# `pip install crease[pandas]` — enables result.to_pandas() and Pandera-backed checks.
pandas = ["pandas", "pandera"]
# `pip install crease[docs]` — for building the docs site locally.
docs = ["mkdocs-material", "mkdocstrings"]
# `pip install crease[all]` — everything optional.
all = ["pandas", "pandera", "mkdocs-material", "mkdocstrings"]

[tool.poetry.group.test.dependencies]
pytest = ">=8.3,<10.0"
pytest-cov = "^5.0"
faker = ">=24.0"
# pandas needed in tests so we can exercise to_pandas without forcing it on users
pandas = ">=2.0"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.8"
pre-commit = "^3.7"
ruff = "^0.6"

[tool.poetry.scripts]
crease = "crease.cli:main"

[tool.ruff]
fix = true
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B905", # zip() without strict=True
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"test_cases/cases.py" = ["E501"]
"tests/*" = ["E501"]
"tools/**/*.py" = ["E501", "B", "C"]

[tool.semantic_release]
tag_format = "v{version}"
major_on_zero = false
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "poetry build"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"

[tool.semantic_release.changelog]
template_dir = ".github/templates"
exclude_commit_patterns = [
    "chore: version bump",
    "chore\\(deps\\)",
    "chore\\(deps-dev\\)",
    "chore\\(release\\)",
]

[tool.semantic_release.changelog.environment]
trim_blocks = true
lstrip_blocks = true

[tool.semantic_release.publish]
upload_to_vcs_release = false

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    """
testpaths = ["tests"]
pythonpath = ["src", "."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
