[project]
name = "crease"
version = "1.13.0"
description = "Declarative Excel-to-JSON extraction and validation. Apply a compact YAML template to .xlsx files to produce canonical JSON and structured per-cell validation errors."
license = "BSD-3-Clause"
readme = "README.md"
authors = [{ name = "Christian Toivola" }]
keywords = ["excel", "xlsx", "etl", "extraction", "validation", "schema", "pandas", "pydantic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
requires-python = ">=3.10"

# Core dependencies — what every install ships with.
# Notably absent: pandas. Opt-in via the `pandas` extra.
dependencies = [
    "openpyxl>=3.1",
    "pydantic>=2.0",
    "python-calamine>=0.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# `pip install crease[pandas]` — enables result.to_pandas().
pandas = ["pandas>=2.0"]
# `pip install crease[docs]` — for building the docs site locally.
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]
# `pip install crease[all]` — everything optional.
all = ["crease[pandas]", "crease[docs]"]

[project.urls]
Homepage = "https://github.com/dev360/crease"
Repository = "https://github.com/dev360/crease"
Documentation = "https://github.com/dev360/crease#readme"

[project.scripts]
crease = "crease.cli:main"

[dependency-groups]
test = [
    "pytest>=8.3,<10.0",
    "pytest-cov>=5,<8",
    "faker>=24.0",
    # pandas needed in tests so we can exercise to_pandas without forcing it on users
    "pandas>=2.0",
]
dev = [
    "python-semantic-release>=9.8,<11.0",
    "pre-commit>=3.7,<5.0",
    "ruff>=0.6,<0.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crease"]

[tool.ruff]
fix = true
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B905", # zip() without strict=True
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"test_cases/cases.py" = ["E501"]
"tests/*" = ["E501"]
"tools/**/*.py" = ["E501", "B", "C", "UP"]

[tool.semantic_release]
tag_format = "v{version}"
major_on_zero = false
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
# Keep uv.lock in sync with the version bump in pyproject.toml. PSR runs
# build_command after writing the new version to source files but before
# the release commit; listing uv.lock in `assets` stages the regenerated
# lockfile in that same commit. Without this, the chore(release) commit
# lands with pyproject.toml at X.Y.Z while uv.lock still records the
# previous version, and every downstream `uv sync --locked` on main fails.
build_command = "uv lock"
assets = ["uv.lock"]

[tool.semantic_release.changelog]
template_dir = ".github/templates"
exclude_commit_patterns = [
    "chore: version bump",
    "chore\\(deps\\)",
    "chore\\(deps-dev\\)",
    "chore\\(release\\)",
]

[tool.semantic_release.changelog.environment]
trim_blocks = true
lstrip_blocks = true

[tool.semantic_release.publish]
upload_to_vcs_release = false

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    """
testpaths = ["tests"]
pythonpath = ["src", "."]

[build-system]
# Floor of 1.27 ensures PEP 639 SPDX license-expression support and pins us
# above any pre-PEP-639 hatchling that would reject `license = "BSD-3-Clause"`.
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"
